# M_Projects

MAmazon_project_c/: CMakeLists.txt  amount_set.c  matamazom.c  matamazom_tests.c  orders.c  orders.h  products.c  products.h  test_matamazom_yonatan_and_hen.c
MParking_mini_project_cpp/: ParkingLot.cpp  ParkingLot.h  UniqueArray.h  UniqueArrayImp.h  VehicleClass.h
